--- a/04-navbar/style.css
+++ b/04-navbar/style.css
@@ -3,3 +3,31 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body{
+    background-color: aquamarine;
+}
+nav{
+    background-color: #fff;
+    box-shadow: 0px 5px 5px black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 30px;
+}
+.nav-main{
+    display: flex;
+    gap: 5%;
+    margin-right: 5%;
+}
+.nav-main div{
+    cursor: pointer;
+    font-size: 1.5rem;
+}
+.social-media-group{
+    display: flex;
+    gap: 20px;
+}
+.social-media-group i{
+    font-size: 1.8rem;
+}
