[feat]: Add hide function

--- a/04-navbar/style.css
+++ b/04-navbar/style.css
@@ -24,6 +24,36 @@ nav{
     cursor: pointer;
     font-size: 1.5rem;
 }
+.hide{
+    display: none;
+    height: 0;
+    overflow: hidden;
+    transition: 1s;
+}
+.show{
+    display: block;
+    transition: 1s;
+}
+.hamburger{
+
+}
+ul{
+    width: 100%;
+    background-color: #fff;
+    position: fixed;
+    right: 0;
+    transition: 1s;
+}
+ul li{
+    font-size: 1.5rem;
+    padding: 10px 0px;
+    margin-left: 1.5em;
+    list-style: none;
+    cursor: pointer;
+}
+ul li:hover{
+    background-color: gray;
+}
 .social-media-group{
     display: flex;
     gap: 20px;
