[feat]: Style components

--- a/05-modal/style.css
+++ b/05-modal/style.css
@@ -3,3 +3,77 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+.box{
+    border: 2px solid ;
+    width: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;    
+    gap: 2rem;
+    border-radius: 5px;
+    background-color: #eee6df;
+    min-height: 250px;
+}
+.open{
+    background-color: #04AA6D; /* Green */
+    border: none;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.5rem;
+    margin: 4px 2px;
+    cursor: pointer;
+    padding: 10px 24px;
+    border-radius: 5px;
+}
+.modal-container{
+    position: fixed;
+    top:0;
+    left: 0;
+    background-color: gray;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.modal{
+    background-color: #eeedf6;
+    width: 700px;
+    min-height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0px 20px;
+    gap: 2rem;
+    text-align: center;
+}
+.close{
+    background-color: red; /* Green */
+    border: none;
+    border-radius: 5px;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.5rem;
+    margin: 4px 2px;
+    cursor: pointer;
+    padding: 10px 24px;
+}
+.hide{
+    display: none;
+}
+.show{
+    pointer-events: auto;
+}
