[refactor]: Change styling values
* Add hide class modal for testing
* Change background color for close button

--- a/05-modal/style.css
+++ b/05-modal/style.css
@@ -59,7 +59,7 @@ body{
     text-align: center;
 }
 .close{
-    background-color: red; /* Green */
+    background-color: red; 
     border: none;
     border-radius: 5px;
     color: white;
